--- a/web-project/.settings/org.eclipse.wst.common.component
+++ b/web-project/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="websystem">
+    <wb-module deploy-name="rentaldata">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
@@ -7,7 +7,7 @@
         <dependent-module archiveName="web-crawler-0.0.1.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/web-crawler/web-crawler">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <property name="context-root" value="websystem"/>
         <property name="java-output-path" value="/websystem/target/classes"/>
+        <property name="context-root" value="rentaldata"/>
     </wb-module>
 </project-modules>
