--- a/web-project/src/main/webapp/resources/css/custom-style.css
+++ b/web-project/src/main/webapp/resources/css/custom-style.css
@@ -1,117 +1,6 @@
 @CHARSET "ISO-8859-1";
 
-.sem-borda {
+.no-border {
 	border-width: 0px !important;
 	border: none !important;
-}
-
-.layout-wrapper.layout-menu-horizontal .layout-topbar .topbar-logo img {
-	height: 36px;
-	vertical-align: middle;
-	margin-top: 10px;
-}
-
-/*Login page*/
-.img-logo {
-	margin-top: 15px;
-}
-
-.login-body {
-	/*background-image: url("#{resource['olympia-layout:images/bg3.jpg']}");*/
-}
-
-.layout-wrapper .layout-main .layout-topbar {
-	background-color: #212121;
-}
-
-.layout-wrapper .layout-sidebar .sidebar-logo {
-	background-color: #212121;
-}
-
-.logo-label {
-	font-size: 18px;
-	color: #efebe9;
-	font-weight: bolder;
-}
-
-.logo-label-sub {
-	font-size: 11px;
-	color: #efebe9;
-	font-weight: bolder;
-}
-
-textarea {
-	border-width: 1px !important;
-}
-
-.bold {
-	font-weight: bold;
-}
-
-[id*=pnlSearchPage_panel] ul {
-	margin-top: 16px !important;
-}
-
-.layout-wrapper .layout-main .layout-breadcrumb ul {
-	margin: 8px 0 0 -10px !important;
-}
-
-.subTable {
-	margin-left: 25px;
-	margin-right: 25px;
-}
-
-body .ui-datatable tbody tr.ui-datatable-even.ui-state-highlight {
-	background-color: transparent !important;
-}
-
-body .ui-datatable tbody tr.ui-state-highlight .ui-inputfield {
-	color: black;
-	border: 2px solid #3465a4 !important;
-}
-
-body .ui-state-active .ui-icon, body .ui-state-highlight .ui-icon {
-	color: #757575;
-}
-
-.ui-chkbox-icon .ui-icon .ui-c .ui-icon-check {
-	color: #ffffff !important;
-}
-
-.disabled input {
-	color: black !important;
-}
-
-.prazo-expirado {
-	color: #B10606;
-}
-
-.prazo-vencer {
-	color: #FFCD00;
-}
-
-.prazo-andamento {
-	color: #10AD00;
-}
-
-.dialogSemPadding>div.ui-dialog-content {
-	padding-left: 0px !important;
-	padding-right: 0px !important;
-}
-
-.panelSemPadding>div.ui-panelgrid-content {
-	padding-left: 0px !important;
-	padding-right: 0px !important;
-}
-
-.price-result {
-	background-color: #00bcd452;
-	padding-top: 5px;
-	border-radius: 5px;
-}
-
-.price-result p {
-	margin-left: 10px !important;
-	margin-bottom: 10px !important;
-	font-weight: bold !important;
 }
