--- a/web-project/src/main/webapp/resources/css/custom-style.css
+++ b/web-project/src/main/webapp/resources/css/custom-style.css
@@ -4,3 +4,9 @@
 	border-width: 0px !important;
 	border: none !important;
 }
+
+.layout-wrapper.layout-topbar-bluegrey .layout-topbar{
+	background-color: transparent;
+	background: url("#{resource['img/data2.jpg']}") no-repeat;
+	background-size: 100% auto;
+}
